<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_v4_qt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="colin.smith@fisherco.com">colin</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>ament_cmake</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qtdeclarative5-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-quick</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>amr_v4_msgs_srvs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
