<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffdrive_ctre</name>
  <version>0.0.9</version>
  <description>Hardware Interface</description>

  <maintainer email="todo@xyz.com">todo</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>amr_v4_msgs_srvs</depend>
  
  <test_depend>ament_cmake_gtest</test_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
